--- a/client/src/app/core/navbar/navbar.component.scss
+++ b/client/src/app/core/navbar/navbar.component.scss
@@ -9,3 +9,16 @@
     color: white;
     text-align: center;
 }
+
+a:hover {
+    color: rgb(255, 196, 0);
+}
+
+a {
+    color: black;
+    text-decoration: none;
+    &.active {
+        color: rgb(231, 4, 252);
+    }
+}
+
