--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,7 +1,11 @@
 <div class="card h-100 shadow-sm">
-  <img src="{{ product.pictureUrl }}" alt="{{ product.name }}" class="img-fluid bg-secondary"/>
+  <img
+    src="{{ product.pictureUrl }}"
+    alt="{{ product.name }}"
+    class="img-fluid bg-secondary"
+  />
   <div class="card-body d-flex flex-column bg-dark">
-    <a href="#">
+    <a routerLink="/shop/{{ product.id }}">
       <h6 class="text-uppercase text-light">{{ product.name }}</h6>
     </a>
     <span class="mb-2 text-light">{{ product.price | currency }}</span>
@@ -11,7 +15,12 @@
         type="button"
         class="btn btn-outline-success fa fa-shopping-cart text-light mr-2"
       ></button>
-      <button type="button" class="btn btn-outline-success text-light">
+      <button
+        [routerLink]="['/shop', product.id]"
+        routerLinkActive="router-link-active"
+        type="button"
+        class="btn btn-outline-success text-light"
+      >
         View
       </button>
     </div>
